--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,7 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.beans-binding.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=InterfaceGraphique.AjouterPersonne
+main.class=InterfaceGraphique.PageAccueil
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
